Added featured-columns to prouct page.

--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,6 +1,8 @@
 <!-- /templates/product.liquid -->
 {%- section 'product-template' -%}
 
+{%- section 'featured-columns' -%}
+
 {%- section "dbtfy-upsell-bundles" -%}
 
 {%- section 'product-row' -%}
