Added product section and snippet varient and included to product.alpha.liquid.

--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -1,5 +1,5 @@
 <!-- /templates/product.liquid -->
-{%- section 'product-template' -%}
+{%- section 'product-template-alpha' -%}
 
 {%- section 'featured-columns' -%}
 
