Added featured-content-alpha section on product alpha page.

--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -3,6 +3,8 @@
 
 {%- section 'featured-columns' -%}
 
+{%- section 'featured-content-alpha' -%}
+
 {%- section "dbtfy-upsell-bundles" -%}
 
 {%- section 'product-row' -%}
