Editted schema to adjust product description.

--- a/sections/featured-content-alpha.liquid
+++ b/sections/featured-content-alpha.liquid
@@ -30,14 +30,14 @@
 
 {% schema %}
   {
-    "name": "Featured content",
+    "name": "Product Description",
     "class": "featured-content-section",
     "settings": [
       {
         "type": "text",
         "id": "title",
         "label": "Heading",
-        "default": "Featured content"
+        "default": "Product Description"
       },
       {
         "type": "select",
