--- a/snippets/product-template-alpha.liquid
+++ b/snippets/product-template-alpha.liquid
@@ -638,6 +638,13 @@
           {%- render "dbtfy-product-tabs" with product as product, is_split_description: is_to_split_description -%}
         {%- endif -%}
 
+        {%- if section.settings.show_product_description -%}
+          {%- if product_description_position == "separate_section" or is_to_split_description -%}
+            <div id="productDescription" class="product-single__description rte spacer-bottom-none">
+            </div>
+          {%- endif -%}
+        {%- endif -%}
+
         {%- if product_tabs_position == "under_description" and product_description_position == "separate_section" -%}
           {%- render "dbtfy-product-tabs" with product as product, is_split_description: is_to_split_description -%}
         {%- endif -%}
