--- a/snippets/product-template-alpha.liquid
+++ b/snippets/product-template-alpha.liquid
@@ -641,6 +641,13 @@
         {%- if section.settings.show_product_description -%}
           {%- if product_description_position == "separate_section" or is_to_split_description -%}
             <div id="productDescription" class="product-single__description rte spacer-bottom-none">
+              {%- if is_to_split_description -%}
+                {%- assign second_part = product.description | split: '<p>[split_description]</p>' | last -%}
+
+                {%- unless second_part contains '[split_description]' -%}
+                {%- endunless -%}
+                
+              {%- endif -%}
             </div>
           {%- endif -%}
         {%- endif -%}
