Third trial to fix html error.

--- a/snippets/product-template-alpha.liquid
+++ b/snippets/product-template-alpha.liquid
@@ -638,19 +638,23 @@
           {%- render "dbtfy-product-tabs" with product as product, is_split_description: is_to_split_description -%}
         {%- endif -%}
 
-        {%- if section.settings.show_product_description -%}
+        {%- unless section.settings.show_product_description -%}
           {%- if product_description_position == "separate_section" or is_to_split_description -%}
             <div id="productDescription" class="product-single__description rte spacer-bottom-none">
               {%- if is_to_split_description -%}
                 {%- assign second_part = product.description | split: '<p>[split_description]</p>' | last -%}
 
                 {%- unless second_part contains '[split_description]' -%}
+                  {{ second_part }}
+                {%- else -%}
+                  {{ product.description | split: '[split_description]' | last }}
                 {%- endunless -%}
-                
+              {%- else -%}
+                {{ product.description | replace: '<p>[split_description]</p>', '' | replace: '[split_description]', '' }}
               {%- endif -%}
             </div>
           {%- endif -%}
-        {%- endif -%}
+        {%- endunless -%}
 
         {%- if product_tabs_position == "under_description" and product_description_position == "separate_section" -%}
           {%- render "dbtfy-product-tabs" with product as product, is_split_description: is_to_split_description -%}
