Added product specification section to product template alpha.

--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -5,6 +5,8 @@
 
 {%- section 'featured-content-alpha' -%}
 
+{%- section 'featured-content' -%}
+
 {%- section "dbtfy-upsell-bundles" -%}
 
 {%- section 'product-row' -%}
