--- a/snippets/product-template-alpha.liquid
+++ b/snippets/product-template-alpha.liquid
@@ -105,7 +105,7 @@
 <meta itemprop="productID" content="{{ product.id }}">
 
 <div class="product-single" data-product-handle="{{ product.handle }}" data-product-id="{{ product.id }}">
-  <div class="box">
+  <div class="box" style="padding-bottom: 0px;">
     <div class="wrapper">
 
       <div class="grid product-single">
