--- a/sections/featured-content.liquid
+++ b/sections/featured-content.liquid
@@ -1,5 +1,5 @@
 <div id="section-{{ section.id }}" class="{{ section.settings.section_style }}" data-section-id="{{ section.id }}" data-section-type="featured-content-section">
-  <div class="box">
+  <div class="box" style="padding-bottom: 0;">
     <div class="wrapper">
       
         <div class="grid">
