Added image with text sections on product alpha.

--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -3,6 +3,10 @@
 
 {%- section 'featured-columns' -%}
 
+{%- section 'product-row' -%}
+
+{%- section 'product-row' -%}
+
 {%- section 'featured-content' -%}
 
 {%- section "dbtfy-upsell-bundles" -%}
