--- a/sections/product-row.liquid
+++ b/sections/product-row.liquid
@@ -45,7 +45,7 @@
 
     {%- if valid_row %}
     <div class="{{ block.settings.section_style }}">
-      <div class="box">
+      <div>
         <div class="wrapper">
 
           <div class="grid grid-spacer align-center">
