Set default to full width

--- a/sections/product-row.liquid
+++ b/sections/product-row.liquid
@@ -94,7 +94,7 @@
         "type": "select",
         "id": "side_padding",
         "label": "Side Padding",
-        "default": "",
+        "default": "0",
         "options": [
           {
             "value": "0",
