--- a/sections/product-row.liquid
+++ b/sections/product-row.liquid
@@ -46,9 +46,9 @@
     {%- if valid_row %}
     <div class="{{ block.settings.section_style }}">
       <div>
-        <div class="wrapper">
+        <div class="wrapper" style="padding-right: 0;">
 
-          <div class="grid grid-spacer align-center">
+          <div class="grid grid-spacer align-center" style="margin: ">
             <div class="grid__item large--six-twelfths medium--six-twelfths featured-row-{{ block.settings.image_alignement }}" style="padding: 0;">
               {%- if block.settings.image != blank -%}
                 <div class="media-wrapper" style="padding-top:{{ 1 | divided_by: block.settings.image.aspect_ratio | times: 100}}%;">
