--- a/sections/product-row.liquid
+++ b/sections/product-row.liquid
@@ -61,7 +61,7 @@
               {%- endif -%}
             </div>
 
-            <div class="grid__item large--six-twelfths medium--six-twelfths {{ block.settings.text_alignment }}">
+            <div class="grid__item large--six-twelfths medium--six-twelfths {{ block.settings.text_alignment }}" style="padding-right: 30px;">
               {%- unless block.settings.title == blank -%}
                 <h2 class="section-header__title">{{ block.settings.title | escape }}</h2>
               {%- endunless -%}
