--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -8199,6 +8199,7 @@ body:not(.dbtfy-product_image_crop-destroy) {
 // Responsive padding on product-row-section (Image with Text section)
 #section-product-row .grid__item {
   padding-right: 30px;
+  color: red;
 }
 
 @media screen and (max-width: 769px) {
