--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -8197,13 +8197,11 @@ body:not(.dbtfy-product_image_crop-destroy) {
 /* Start of custom CSS by Haruka Ichinose ========================= */ 
 
 // Responsive padding on product-row-section (Image with Text section)
-#section-product-row .grid__item {
-  padding-right: 30px;
-  color: red;
-}
-
 #section-product-row {
-  color: blue;
+  .grid__item {
+    padding-right: 30px;
+    color: red;
+  }
 }
 
 @media screen and (max-width: 769px) {
