Deleted broken style

--- a/sections/product-row.liquid
+++ b/sections/product-row.liquid
@@ -48,7 +48,7 @@
       <div>
         <div class="wrapper" style="padding-right: 0;">
 
-          <div class="grid grid-spacer align-center" style="margin: ">
+          <div class="grid grid-spacer align-center">
             <div class="grid__item large--six-twelfths medium--six-twelfths featured-row-{{ block.settings.image_alignement }}" style="padding: 0;">
               {%- if block.settings.image != blank -%}
                 <div class="media-wrapper" style="padding-top:{{ 1 | divided_by: block.settings.image.aspect_ratio | times: 100}}%;">
