Removed inline padding.

--- a/sections/product-row.liquid
+++ b/sections/product-row.liquid
@@ -46,7 +46,7 @@
     {%- if valid_row %}
     <div class="{{ block.settings.section_style }}">
       <div>
-        <div class="wrapper" style="padding-right: 0;">
+        <div class="wrapper">
 
           <div class="grid grid-spacer align-center">
             <div class="grid__item large--six-twelfths medium--six-twelfths featured-row-{{ block.settings.image_alignement }}">
