--- a/sections/product-row.liquid
+++ b/sections/product-row.liquid
@@ -49,7 +49,7 @@
         <div class="wrapper">
 
           <div class="grid grid-spacer align-center">
-            <div class="grid__item large--six-twelfths medium--six-twelfths featured-row-{{ block.settings.image_alignement }}">
+            <div class="grid__item large--six-twelfths medium--six-twelfths featured-row-{{ block.settings.image_alignement }}" style="padding-left: 15px;">
               {%- if block.settings.image != blank -%}
                 <div class="media-wrapper" style="padding-top:{{ 1 | divided_by: block.settings.image.aspect_ratio | times: 100}}%;">
                   <img class="media lazyload"
@@ -61,7 +61,7 @@
               {%- endif -%}
             </div>
 
-            <div class="grid__item large--six-twelfths medium--six-twelfths {{ block.settings.text_alignment }}">
+            <div class="grid__item large--six-twelfths medium--six-twelfths {{ block.settings.text_alignment }}" style="padding-left: 15px;">
               {%- unless block.settings.title == blank -%}
                 <h2 class="section-header__title">{{ block.settings.title | escape }}</h2>
               {%- endunless -%}
