--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -7,9 +7,7 @@
 
 {%- section 'featured-content' -%}
 
-{%- section "dbtfy-upsell-bundles" -%}
-
-{%- section 'product-row' -%}
+{%- section 'gallery' -%}
 
 {%- section 'dbtfy-pricing-table' -%}
 
