--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -8193,3 +8193,10 @@ body:not(.dbtfy-product_image_crop-destroy) {
   }
 }
 /* end-dbtfy-collection-filters */
+
+/* START OF CUSTOM STYLINGS ========================= */
+
+/* Padding on right grid (image or text) on product row section. */
+#section-product-row .product-row-image.featured-row-right {
+  padding-left: 0%;
+}
