--- a/sections/product-row.liquid
+++ b/sections/product-row.liquid
@@ -49,7 +49,7 @@
         <div class="wrapper">
 
           <div class="grid grid-spacer align-center">
-            <div class="grid__item large--six-twelfths medium--six-twelfths featured-row-{{ block.settings.image_alignement }}">
+            <div class="product-row-image grid__item large--six-twelfths medium--six-twelfths featured-row-{{ block.settings.image_alignement }}">
               {%- if block.settings.image != blank -%}
                 <div class="media-wrapper" style="padding-top: 100%;">
                   <img class="media lazyload"
@@ -62,7 +62,7 @@
               {%- endif -%}
             </div>
 
-            <div class="grid__item large--six-twelfths medium--six-twelfths {{ block.settings.text_alignment }}">
+            <div class="product-row-text grid__item large--six-twelfths medium--six-twelfths {{ block.settings.text_alignment }}　featured-row-{{ block.settings.image_alignement }}">
               {%- unless block.settings.title == blank -%}
                 <h2 class="section-header__title">{{ block.settings.title | escape }}</h2>
               {%- endunless -%}
