Custom styling second attempt

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -8197,6 +8197,6 @@ body:not(.dbtfy-product_image_crop-destroy) {
 /* START OF CUSTOM STYLINGS ========================= */
 
 /* Padding on right grid (image or text) on product row section. */
-#section-product-row .product-row-image.featured-row-right {
+.product-row-image.featured-row-right {
   padding-left: 0%;
 }
