--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -8197,6 +8197,6 @@ body:not(.dbtfy-product_image_crop-destroy) {
 /* START OF CUSTOM STYLINGS ========================= */
 
 /* Padding on right grid (image or text) on product row section. */
-.product-row-image.featured-row-right {
+div.product-row-image.grid__item.large--six-twelfths.medium--six-twelfths.featured-row-right {
   padding-left: 0%;
 }
