Another test using !important.

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -8200,9 +8200,5 @@ div.product-row-grid {
 }
 
 .product-row-grid .grid__item {
-  padding: 0;
-}
-
-html {
-  color: red!important;
+  padding: 0 !important;
 }
