--- a/sections/product-row.liquid
+++ b/sections/product-row.liquid
@@ -51,7 +51,7 @@
           <div class="grid grid-spacer align-center" style="margin-left: 0;">
             <div class="grid__item large--six-twelfths medium--six-twelfths featured-row-{{ block.settings.image_alignement }}" style="padding: 0;">
               {%- if block.settings.image != blank -%}
-                <div class="media-wrapper" style="padding-top: 100%;">
+                <div class="media-wrapper" style="padding-top: 100%; border-radius: 0;">
                   <img class="media lazyload"
                   {%- render 'lazysizes', img: block.settings.image, img_type: 'responsive' -%}
                   alt="{{ block.settings.image.alt }}"
