Replaced gallery with a custom gallery section.

--- a/templates/product.alpha.liquid
+++ b/templates/product.alpha.liquid
@@ -7,7 +7,7 @@
 
 {%- section 'featured-content' -%}
 
-{%- section 'gallery' -%}
+{%- section 'custom-gallery' -%}
 
 {%- section 'dbtfy-pricing-table' -%}
 
