Image uploader schema for custom gallery

--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -1,3 +1,22 @@
 <h1>
-    Hello Gellery!!
+  Hello Gellery!!
 </h1>
+
+{% schema %}
+  {
+    "name": "Custom Gallery",
+    "class": "custom-gallery-section"
+    "settings": [
+      {
+        "type": "image",
+        "name": "Image"
+        "settings": [
+          {
+            "type": "select",
+            "id": image",
+            "label": "Image"
+          }
+        ]
+      }
+    ]
+  }
