Debugging schema of custom-gallery

--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -8,15 +8,9 @@
     "class": "custom-gallery-section"
     "settings": [
       {
-        "type": "image",
-        "name": "Image"
-        "settings": [
-          {
-            "type": "select",
-            "id": image",
-            "label": "Image"
-          }
-        ]
+        "type": "image_picker",
+        "id": "image"
+        "label": "Image"
       }
     ]
   }
