Test schema loaded

--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -3,15 +3,7 @@
 </h1>
 
 {% schema %}
-  {
-    "name": "Custom Gallery",
-    "class": "custom-gallery-section"
-    "settings": [
-      {
-        "type": "image_picker",
-        "id": "image"
-        "label": "Image"
-      }
-    ]
-  }
+{
+  "name": "Custom Gallery"
+}
 {% endschema %}
