Added tag, class, and first setting.

--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -4,7 +4,16 @@
 
 {% schema %}
 {
-  
-"name": "Slideshow"
+  "name": "Custom Gallery",
+  "tag": "section",
+  "class": "custom-gallery"
+  "settings": [
+    {
+      "type": "text",
+      "id": "header"
+      "label": "Header"
+    }
+
+  ]
 }
 {% endschema %}
