--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -13,7 +13,12 @@
       "id": "header"
       "label": "Header"
     }
-
+  ],
+  "presets": [
+      {
+          "name": "section name",
+          "category": "custom section"
+      }
   ]
 }
 {% endschema %}
