Added missed colon

--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -6,6 +6,13 @@
 {
   "name": "Custom Gallery",
   "tag": "section",
-  "class": "custom-gallery"
+  "class": "custom-gallery",
+  "settings": [
+    {
+      "type": "text",
+      "id": "header"
+      "label": "Header"
+    }
+  ]
 }
 {% endschema %}
