--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -13,6 +13,39 @@
       "id": "header"
       "label": "Header"
     }
-  ]
+  ],
+  "blocks": [
+     {
+       "name": "Image",
+       "type": "image",
+       "settings": [
+         {
+           "type": "image_picker",
+           "id": "image",
+           "label": "Image"
+         }
+       ]
+     }
+   ]
+  "presets": [
+     {
+       "name": "Custom Gallery",
+       "settings": {
+          "title": "Custom Gallery"
+        },
+       "blocks": [
+         {
+           "type": "image",
+           "settings": [
+             {
+               "type": "image_picker",
+               "id": "image",
+               "label": "Image"
+             }
+           ]
+         },
+       ]
+     }
+   ]
 }
 {% endschema %}
