--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -10,7 +10,7 @@
   "settings": [
     {
       "type": "text",
-      "id": "header"
+      "id": "header",
       "label": "Header"
     }
   ],
@@ -26,7 +26,7 @@
          }
        ]
      }
-   ]
+   ],
   "presets": [
      {
        "name": "Custom Gallery",
