--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -14,15 +14,20 @@
       "label": "Header"
     }
   ],
-  "blocks": [
+  "presets": [
     {
-      "name": "Image",
-      "type": "image",
-      "settings": [
+      "name": "Slideshow",
+      "settings": {
+        "title": "Slideshow"
+      },
+      "blocks": [
         {
-          "type": "image_picker",
-          "id": "image",
-          "label": "Image"
+          "type": "image",
+          "settings": []
+        },
+        {
+          "type": "image",
+          "settings": []
         }
       ]
     }
