--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -3,8 +3,8 @@
 </h1>
 {% for block in section.blocks %}
   {% case block.type %}
-    {% when 'slide' %}
-      <div class="slide" {{ block.shopify_attributes }}>
+    {% when 'image' %}
+      <div class="image" {{ block.shopify_attributes }}>
         {{ block.settings.image | img_url: '2048x' | img_tag }}
       </div>
   {% endcase %}
