Experimenting indexlin array

--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -1,14 +1,17 @@
-<h1>
-  Hello Gellery!!
-</h1>
-{% for block in section.blocks %}
-  {% case block.type %}
-    {% when 'image' %}
-      <div class="image" {{ block.shopify_attributes }}>
-        {{ block.settings.image | img_url: '2048x' | img_tag }}
+<div id="section-{{ section.id }}" class="section-full-width">
+  <div class="box">
+    <div class="grid">
+      <div class="grid__item push--four-twelfths">
+        <div>
+          {{ section.blocks[0].settings.image | img_url: '2048x' | img_tag }}
+        </div>
       </div>
-  {% endcase %}
-{% endfor %}
+    </div>
+  </div>
+</div>
+
+</div>
+
 
 
 {% schema %}
