--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -1,7 +1,7 @@
 <div id="section-{{ section.id }}" class="section-full-width">
   <div class="box">
     <div class="grid">
-      <div class="grid__item push--four-twelfths">
+      <div class="grid__item four-twelfths">
         <div>
           {{ section.blocks[0].settings.image | img_url: '2048x' | img_tag }}
         </div>
