Added more images with rough grid styling.

--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -5,6 +5,26 @@
         <div>
           {{ section.blocks[0].settings.image | img_url: '2048x' | img_tag }}
         </div>
+        <div>
+          {{ section.blocks[1].settings.image | img_url: '2048x' | img_tag }}
+        </div>
+      </div>
+      <div class="grid__item eight-twelfths">
+        <div>
+          {{ section.blocks[2].settings.image | img_url: '2048x' | img_tag }}
+        </div>
+        <div class="grid">
+          <div class="grid__item sixth-twelfths">
+            <div>
+              {{ section.blocks[3].settings.image | img_url: '2048x' | img_tag }}
+            </div>
+          </div>
+          <div class="grid__item sixth-twelfths">
+            <div>
+              {{ section.blocks[4].settings.image | img_url: '2048x' | img_tag }}
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
