style sheet test

--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -1,4 +1,5 @@
 <div id="section-{{ section.id }}" class="section-full-width">
+  <h1 class="red">Bla</h1>
   <div class="box">
     <div class="grid">
       <div class="grid__item four-twelfths custom-gallery-column">
@@ -62,6 +63,9 @@
 {% endschema %}
 
 {% stylesheet %}
+.red {
+  color: red;
+}
 .custom-gallery-column {
   height: 100%;
 }
