Moved styling to theme.scss

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -8193,3 +8193,22 @@ body:not(.dbtfy-product_image_crop-destroy) {
   }
 }
 /* end-dbtfy-collection-filters */
+
+/* Start of Custom Stylings ======================*/
+.custom-gallery {
+  .custom-gallery-column {
+    height: 100%;
+  }
+  .custom-gallery-first-column .image-top {
+    height: 83%;
+  }
+  .custom-gallery-first-column .image-bottom {
+    height: 17%;
+  }
+  .custom-gallery-second-column .image-top {
+    height: 25%;
+  }
+  .custom-gallery-second-column .image-bottom {
+    height: 75%;
+  }
+}
