--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -2,15 +2,18 @@
   <h1 class="red">Bla</h1>
   <div class="box">
     <div class="grid">
-      <div class="grid__item four-twelfths custom-gallery-column">
-        <div class="image-top">
-          {{ section.blocks[0].settings.image | img_url: '2048x' | img_tag }}
+      <div class="grid__item medium--four-twelfths custom-gallery-column">
+        <div class="image-top media-wrapper">
+          <img class="media lazyload"
+                  {%- render 'lazysizes', img: section.blocks[0].settings.image, img_type: 'responsive' -%}
+                  alt="{{ block.settings.image.alt }}"
+                  style="overflow: hidden; border-radius: 0;">
         </div>
         <div class="image-bottom">
           {{ section.blocks[1].settings.image | img_url: '2048x' | img_tag }}
         </div>
       </div>
-      <div class="grid__item eight-twelfths custom-gallery-column">
+      <div class="grid__item medium--eight-twelfths custom-gallery-column">
         <div class="image-top">
           {{ section.blocks[2].settings.image | img_url: '2048x' | img_tag }}
         </div>
