--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -4,10 +4,7 @@
     <div class="grid">
       <div class="grid__item medium--four-twelfths custom-gallery-column">
         <div class="image-top media-wrapper">
-          <img class="media lazyload"
-                  {%- render 'lazysizes', img: section.blocks[0].settings.image, img_type: 'responsive' -%}
-                  alt="{{ block.settings.image.alt }}"
-                  style="overflow: hidden; border-radius: 0;">
+            {{ section.blocks[0].settings.image | img_url: '2048x' | img_tag }}
         </div>
         <div class="image-bottom">
           {{ section.blocks[1].settings.image | img_url: '2048x' | img_tag }}
