--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -3,11 +3,13 @@
   <div class="box">
     <div class="grid">
       <div class="grid__item medium--four-twelfths custom-gallery-column">
-        <div class="image-top media-wrapper">
-            {{ section.blocks[0].settings.image | img_url: '2048x' | img_tag }}
+        <div class="image-top media-wrapper" style="padding-top: 100%; border-radius: 0;">
+          <img class="media lazyload"
+          {%- render 'lazysizes', img: section.blocks[0].settings.image, img_type: 'responsive' -%}>
         </div>
-        <div class="image-bottom">
-          {{ section.blocks[1].settings.image | img_url: '2048x' | img_tag }}
+        <div class="image-bottom media-wrapper" style="padding-top: 100%; border-radius: 0;">
+          <img class="media lazyload"
+          {%- render 'lazysizes', img: section.blocks[1].settings.image, img_type: 'responsive' -%}>
         </div>
       </div>
       <div class="grid__item medium--eight-twelfths custom-gallery-column">
