--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -4,27 +4,30 @@
     <div class="grid">
       <div class="grid__item medium--four-twelfths custom-gallery-column">
         <div class="image-top media-wrapper" style="padding-top: 100%; border-radius: 0;">
-          <img class="media lazyload"
+          <img class="media lazyload" style="overflow: hidden;"
           {%- render 'lazysizes', img: section.blocks[0].settings.image, img_type: 'responsive' -%}>
         </div>
         <div class="image-bottom media-wrapper" style="padding-top: 100%; border-radius: 0;">
-          <img class="media lazyload"
+          <img class="media lazyload" style="overflow: hidden;"
           {%- render 'lazysizes', img: section.blocks[1].settings.image, img_type: 'responsive' -%}>
         </div>
       </div>
       <div class="grid__item medium--eight-twelfths custom-gallery-column">
-        <div class="image-top">
-          {{ section.blocks[2].settings.image | img_url: '2048x' | img_tag }}
+        <div class="image-top media-wrapper" style="padding-top: 100%; border-radius: 0;">
+          <img class="media lazyload" style="overflow: hidden;"
+          {%- render 'lazysizes', img: section.blocks[2].settings.image, img_type: 'responsive' -%}>
         </div>
         <div class="grid image-bottom">
           <div class="grid__item sixth-twelfths">
-            <div>
-              {{ section.blocks[3].settings.image | img_url: '2048x' | img_tag }}
+            <div class="image-top media-wrapper" style="padding-top: 100%; border-radius: 0;">
+              <img class="media lazyload" style="overflow: hidden;"
+              {%- render 'lazysizes', img: section.blocks[3].settings.image, img_type: 'responsive' -%}>
             </div>
           </div>
           <div class="grid__item sixth-twelfths">
-            <div>
-              {{ section.blocks[4].settings.image | img_url: '2048x' | img_tag }}
+            <div class="image-top media-wrapper" style="padding-top: 100%; border-radius: 0;">
+              <img class="media lazyload" style="overflow: hidden;"
+              {%- render 'lazysizes', img: section.blocks[4].settings.image, img_type: 'responsive' -%}>
             </div>
           </div>
         </div>
