--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -3,30 +3,30 @@
   <div class="box">
     <div class="grid">
       <div class="grid__item medium--four-twelfths custom-gallery-column">
-        <div class="image-top media-wrapper" style="padding-top: 225%; overflow: hidden;">
-          <img class="media lazyload" style="height: 100%;"
+        <div class="image-top media-wrapper" style="padding-top: 225%;">
+          <img class="media lazyload" style="height: 100%; max-width: unset;"
           {%- render 'lazysizes', img: section.blocks[0].settings.image, img_type: 'responsive' -%}>
         </div>
-        <div class="image-bottom media-wrapper" style="padding-top: 75%; overflow: hidden;">
-          <img class="media lazyload" style="height: 100%; "
+        <div class="image-bottom media-wrapper" style="padding-top: 75%;">
+          <img class="media lazyload" style="height: 100%; max-width: unset;"
           {%- render 'lazysizes', img: section.blocks[1].settings.image, img_type: 'responsive' -%}>
         </div>
       </div>
       <div class="grid__item medium--eight-twelfths custom-gallery-column">
-        <div class="image-top media-wrapper" style="padding-top: 50%; overflow: hidden;">
-          <img class="media lazyload" style="height: 100%;"
+        <div class="image-top media-wrapper" style="padding-top: 50%;">
+          <img class="media lazyload" style="height: 100%; max-width: unset;"
           {%- render 'lazysizes', img: section.blocks[2].settings.image, img_type: 'responsive' -%}>
         </div>
         <div class="grid image-bottom">
           <div class="grid__item sixth-twelfths">
-            <div class="image-top media-wrapper" style="padding-top: 200%; overflow: hidden;">
-              <img class="media lazyload" style="height: 100%;"
+            <div class="image-top media-wrapper" style="padding-top: 200%;">
+              <img class="media lazyload" style="height: 100%; max-width: unset;"
               {%- render 'lazysizes', img: section.blocks[3].settings.image, img_type: 'responsive' -%}>
             </div>
           </div>
           <div class="grid__item sixth-twelfths">
-            <div class="image-top media-wrapper" style="padding-top: 200%; overflow: hidden;">
-              <img class="media lazyload" style="height: 100%;"
+            <div class="image-top media-wrapper" style="padding-top: 200%;">
+              <img class="media lazyload" style="height: 100%; max-width: unset;"
               {%- render 'lazysizes', img: section.blocks[4].settings.image, img_type: 'responsive' -%}>
             </div>
           </div>
