Added margin-bottom to images.

--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -3,29 +3,29 @@
   <div class="box">
     <div class="grid">
       <div class="grid__item medium--four-twelfths custom-gallery-column">
-        <div class="image-top media-wrapper" style="padding-top: 225%;">
+        <div class="image-top media-wrapper" style="padding-top: 225%; margin-bottom: 30px;">
           <img class="media lazyload" style="height: 100%; width: auto; max-width: unset;"
           {%- render 'lazysizes', img: section.blocks[0].settings.image, img_type: 'responsive' -%}>
         </div>
-        <div class="image-bottom media-wrapper" style="padding-top: 75%;">
+        <div class="image-bottom media-wrapper" style="padding-top: 75%; margin-bottom: 30px;">
           <img class="media lazyload" style="height: 100%; width: auto; max-width: unset;"
           {%- render 'lazysizes', img: section.blocks[1].settings.image, img_type: 'responsive' -%}>
         </div>
       </div>
       <div class="grid__item medium--eight-twelfths custom-gallery-column">
-        <div class="image-top media-wrapper" style="padding-top: 63.5%;">
+        <div class="image-top media-wrapper" style="padding-top: 63.5%; margin-bottom: 30px;">
           <img class="media lazyload" style="height: 100%; width: auto; max-width: unset;"
           {%- render 'lazysizes', img: section.blocks[2].settings.image, img_type: 'responsive' -%}>
         </div>
         <div class="grid image-bottom">
           <div class="grid__item sixth-twelfths">
-            <div class="image-top media-wrapper" style="padding-top: 175%;">
+            <div class="image-top media-wrapper" style="padding-top: 175%; margin-bottom: 30px;">
               <img class="media lazyload" style="height: 100%; width: auto; max-width: unset;"
               {%- render 'lazysizes', img: section.blocks[3].settings.image, img_type: 'responsive' -%}>
             </div>
           </div>
           <div class="grid__item sixth-twelfths">
-            <div class="image-top media-wrapper" style="padding-top: 175%;">
+            <div class="image-top media-wrapper" style="padding-top: 175%; margin-bottom: 30px;">
               <img class="media lazyload" style="height: 100%; width: auto; max-width: unset;"
               {%- render 'lazysizes', img: section.blocks[4].settings.image, img_type: 'responsive' -%}>
             </div>
