Fixed large grid size of custom gallery.

--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -10,7 +10,7 @@
         {%- render 'lazysizes', img: section.blocks[1].settings.image, img_type: 'responsive' -%}>
       </div>
     </div>
-    <div class="grid__item medium--eight-twelfths large--four-twelfths custom-gallery-column">
+    <div class="grid__item medium--eight-twelfths large--eight-twelfths custom-gallery-column">
       <div class="image-top media-wrapper" style="padding-top: 63.5%; margin-bottom: 30px;">
         <img class="media lazyload" style="height: 100%; width: auto; max-width: unset;"
         {%- render 'lazysizes', img: section.blocks[2].settings.image, img_type: 'responsive' -%}>
