--- a/sections/custom-gallery.liquid
+++ b/sections/custom-gallery.liquid
@@ -1,30 +1,30 @@
 <div id="section-{{ section.id }}" class="wrapper">
   <div class="grid">
-    <div class="grid__item medium--four-twelfths large--four-twelfths custom-gallery-column">
-      <div class="image-top media-wrapper" style="padding-top: 225%; margin-bottom: 30px;">
-        <img class="media lazyload" style="height: 100%; width: auto; max-width: unset;"
+    <div class="grid__item medium--four-twelfths large--four-twelfths custom-gallery-column first-column">
+      <div class="image-top media-wrapper">
+        <img class="media lazyload"
         {%- render 'lazysizes', img: section.blocks[0].settings.image, img_type: 'responsive' -%}>
       </div>
-      <div class="image-bottom media-wrapper" style="padding-top: 75%; margin-bottom: 30px;">
-        <img class="media lazyload" style="height: 100%; width: auto; max-width: unset;"
+      <div class="image-bottom media-wrapper">
+        <img class="media lazyload"
         {%- render 'lazysizes', img: section.blocks[1].settings.image, img_type: 'responsive' -%}>
       </div>
     </div>
-    <div class="grid__item medium--eight-twelfths large--eight-twelfths custom-gallery-column">
-      <div class="image-top media-wrapper" style="padding-top: 63.5%; margin-bottom: 30px;">
-        <img class="media lazyload" style="height: 100%; width: auto; max-width: unset;"
+    <div class="grid__item medium--eight-twelfths large--eight-twelfths custom-gallery-column second-column">
+      <div class="image-top media-wrapper">
+        <img class="media lazyload"
         {%- render 'lazysizes', img: section.blocks[2].settings.image, img_type: 'responsive' -%}>
       </div>
       <div class="grid image-bottom">
         <div class="grid__item sixth-twelfths">
-          <div class="image-top media-wrapper" style="padding-top: 165%; margin-bottom: 30px;">
-            <img class="media lazyload" style="height: 100%; width: auto; max-width: unset;"
+          <div class="image-left media-wrapper">
+            <img class="media lazyload"
             {%- render 'lazysizes', img: section.blocks[3].settings.image, img_type: 'responsive' -%}>
           </div>
         </div>
         <div class="grid__item sixth-twelfths">
-          <div class="image-top media-wrapper" style="padding-top: 165%; margin-bottom: 30px;">
-            <img class="media lazyload" style="height: 100%; width: auto; max-width: unset;"
+          <div class="image-right media-wrapper">
+            <img class="media lazyload"
             {%- render 'lazysizes', img: section.blocks[4].settings.image, img_type: 'responsive' -%}>
           </div>
         </div>
@@ -33,7 +33,23 @@
   </div>
 </div>
 
+{% style %}
+  #shopify-section-custom-gallery .media-wrapper {
+    margin-bottom: 16px;
+  }
+  .first-column div {
+    padding-top: 100%;
+  }
+  .second-column .image-top, .second-column .image-left, .second-column .image-right {
+    padding-top: 100%;
+  }
+  #shopify-section-custom-gallery img {
+    height: 100%; 
+    width: auto; 
+    max-width: unset;
+  }
 
+{% endstyle %}
 
 {% schema %}
 {
