Fixed selector name for gellary imagas CSS.

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8644,28 +8644,28 @@ body:not(.dbtfy-wish_list-destroy) {
     margin-bottom: 16px;
   }
 }
-#shopify-section-custom-gallery .image-one {
+#shopify-section-custom-gallery .gallery-image-one {
   padding-top: 225%;
   @include screen($small) {
     padding-top: 150%;
   }
 }
-#shopify-section-custom-gallery .image-two {
+#shopify-section-custom-gallery .gallery-image-two {
   padding-top: 75%;
   @include screen($small) {
     padding-top: 150%;
   }
 }
-#shopify-section-custom-gallery .image-three {
+#shopify-section-custom-gallery .gallery-image-three {
   padding-top: 63.5%;
 }
-#shopify-section-custom-gallery .image-four {
+#shopify-section-custom-gallery .gallery-image-four {
   padding-top: 165%;
   @include screen($small) {
     padding-top: 150%;
   }
 }
-#shopify-section-custom-gallery .image-five {
+#shopify-section-custom-gallery .gallery-image-five {
   padding-top: 165%;
   @include screen($small) {
     padding-top: 150%;
